work on linking que with scheduled